--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -33,6 +33,9 @@
     --ring: 222.2 84% 4.9%;
  
     --radius: 0.5rem;
+
+    --background: rgb(255,255,255);
+    --background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(95,218,185,1) 100%);
   }
  
   .dark {
